--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 streamlit
 Pillow
-opencv-python-headless>=4.5.5.62
-numpy>=1.21.0
+opencv-python-headless
 ultralytics
-# 系统依赖：libgl1-mesa-glx libglib2.0-0
